--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-Halo nama saya naila
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portofolio Saya</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem 0;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #444;
+      padding: 0.5rem 0;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+    }
+
+    .container {
+      padding: 2rem;
+    }
+
+    .project {
+      margin-bottom: 2rem;
+      border: 1px solid #ddd;
+      padding: 1rem;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .project h3 {
+      margin-top: 0;
+    }
+
+    .project p {
+      margin-bottom: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>Portofolio Saya</h1>
+  </header>
+
+  <nav>
+    <a href="#about">Tentang</a>
+    <a href="#projects">Proyek</a>
+    <a href="#contact">Kontak</a>
+  </nav>
+
+  <div class="container" id="about">
+    <h2>Tentang Saya</h2>
+    <p>Selamat datang di halaman portofolio saya. Saya adalah seorang pengembang web yang bersemangat untuk menciptakan solusi digital yang kreatif dan efisien.</p>
+  </div>
+
+  <div class="container" id="projects">
+    <h2>Proyek</h2>
+    <div class="project">
+      <h3>Website Perusahaan XYZ</h3>
+      <p>Website responsif yang dibangun untuk perusahaan XYZ, dengan fokus pada kecepatan dan pengalaman pengguna yang baik.</p>
+    </div>
+
+    <div class="project">
+      <h3>Aplikasi Mobile ABC</h3>
+      <p>Aplikasi mobile yang dikembangkan menggunakan React Native, dengan fitur-fitur canggih untuk mempermudah pengguna.</p>
+    </div>
+  </div>
+
+  <div class="container" id="contact">
+    <h2>Kontak</h2>
+    <p>Jika Anda tertarik untuk bekerja sama atau ingin mengetahui lebih lanjut tentang proyek saya, silakan hubungi saya melalui email di alamat@example.com.</p>
+  </div>
+</body>
+
+</html>
+
