--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     }
 
     header {
-      background-color: #333;
-      color: #fff;
+      background-color: #9932CC;
+      color: #800080;
       text-align: center;
       padding: 1rem 0;
     }
@@ -22,7 +22,7 @@
     nav {
       display: flex;
       justify-content: center;
-      background-color: #444;
+      background-color: #663399
       padding: 0.5rem 0;
     }
 
