--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
   <div class="container" id="contact">
     <h2>Kontak</h2>
-    <p>Jika Anda tertarik untuk bekerja sama atau ingin mengetahui lebih lanjut tentang proyek saya, silakan hubungi saya melalui email di alamat@example.com.</p>
+    <p>Email : nailaulfi452@gmail.com.</p>
+    <p>Wa    : 082325623091.</p>
+    <p>Instagram : nailaulfrmdn.</p>
   </div>
 </body>
 
