--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </nav>
 
   <div class="container" id="about">
-    <h2>Tentang Saya</h2>
-    <p>Selamat datang di halaman portofolio saya. Saya adalah seorang pengembang web yang bersemangat untuk menciptakan solusi digital yang kreatif dan efisien.</p>
+    <h2>Tentang Naila</h2>
+    <p>Hai, nama saya Naila Ulfi Ramadani, saya berusia 16 tahun, saya sekolah di SMKN 2 SMG kelas XI PPLG 2.</p>
   </div>
 
   <div class="container" id="projects">
@@ -85,9 +85,9 @@
 
   <div class="container" id="contact">
     <h2>Kontak</h2>
-    <p>Email : nailaulfi452@gmail.com.</p>
-    <p>Wa    : 082325623091.</p>
-    <p>Instagram : nailaulfrmdn.</p>
+    <p>Email : nailaulfi452@gmail.com</p>
+    <p>Wa    : 082325623091</p>
+    <p>Instagram : nailaulfrmdn</p>
   </div>
 </body>
 
