--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>Portofolio Saya</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Franklin Gothic Heavy, Georgia;
       margin: 0;
       padding: 0;
     }
 
     header {
-      background-color: #9932CC;
-      color: #800080;
+      background-color: #ADD8E6;
+      color: #4682B4;
       text-align: center;
       padding: 1rem 0;
     }
@@ -22,7 +22,7 @@
     nav {
       display: flex;
       justify-content: center;
-      background-color: #663399
+      background-color: #00BFFF
       padding: 0.5rem 0;
     }
 
@@ -73,7 +73,7 @@
   <div class="container" id="projects">
     <h2>Proyek</h2>
     <div class="project">
-      <h3>Website Perusahaan XYZ</h3>
+      <h3>Website Per</h3>
       <p>Website responsif yang dibangun untuk perusahaan XYZ, dengan fokus pada kecepatan dan pengalaman pengguna yang baik.</p>
     </div>
 
@@ -84,7 +84,7 @@
   </div>
 
   <div class="container" id="contact">
-    <h2>Kontak</h2>
+    <h2>CONTACT</h2>
     <p>Email : nailaulfi452@gmail.com</p>
     <p>Wa    : 082325623091</p>
     <p>Instagram : nailaulfrmdn</p>
