--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2>CONTACT</h2>
     <p>Email : nailaulfi452@gmail.com</p>
     <p>Wa    : 082325623091</p>
-    <p>Instagram : nailaulfrmdn</p>
+    <p>Instagram : @nailaulfrmdn</p>
   </div>
 </body>
 
