--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </nav>
 
   <div class="container" id="about">
-    <h2>Tentang Naila</h2>
-    <p>Hai, nama saya Naila Ulfi Ramadani, saya berusia 16 tahun, saya sekolah di SMKN 2 SMG kelas XI PPLG 2.</p>
+    <h2>TENTANG NAILA</h2>
+    <p>Nama : Naila Ulfi Ramadani</p>Kelas : XI PPLG 2</p>Tanggal lahir: 13 Oktober 2006</p>Alamat : Jl. Kelapa Gading Raya Bangetayu Wetan Rt 03 Rw 08</p>
   </div>
 
   <div class="container" id="projects">
