--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portofolio Saya</title>
   <style>
     body {
-      font-family: Franklin Gothic Heavy, Georgia;
+      font-family: GOUDY STOUT, Bookman Old Style;
       margin: 0;
       padding: 0;
     }
