--- a/index.html
+++ b/index.html
@@ -71,18 +71,13 @@
   </div>
 
   <div class="container" id="projects">
-    <h2>Proyek</h2>
+    <h2>RIWAYAT PENDIDIKAN</h2>
     <div class="project">
       <h3>Website Per</h3>
-      <p>Website responsif yang dibangun untuk perusahaan XYZ, dengan fokus pada kecepatan dan pengalaman pengguna yang baik.</p>
+      <p>TK : TK PGRI 105</p>SD: SDN SAMBIREJO 02</p>SMP: SMP PGRI 01</p>SMK: SMKN 02 SEMARANG</p>
     </div>
 
-    <div class="project">
-      <h3>Aplikasi Mobile ABC</h3>
-      <p>Aplikasi mobile yang dikembangkan menggunakan React Native, dengan fitur-fitur canggih untuk mempermudah pengguna.</p>
-    </div>
-  </div>
-
+  
   <div class="container" id="contact">
     <h2>CONTACT</h2>
     <p>Email : nailaulfi452@gmail.com</p>
