--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </nav>
 
   <div class="container" id="about">
-    <h2>TENTANG NAILA</h2>
+    <h2>TENTANG SAYA</h2>
     <p>Nama : Naila Ulfi Ramadani</p>Kelas : XI PPLG 2</p>Tanggal lahir: 13 Oktober 2006</p>Alamat : Jl. Kelapa Gading Raya Bangetayu Wetan Rt 03 Rw 08</p>
   </div>
 
