--- a/index.html
+++ b/index.html
@@ -69,14 +69,12 @@
     <h2>TENTANG SAYA</h2>
     <p>Nama : Naila Ulfi Ramadani</p>Kelas : XI PPLG 2</p>Tanggal lahir: 13 Oktober 2006</p>Alamat : Jl. Kelapa Gading Raya Bangetayu Wetan Rt 03 Rw 08</p>
   </div>
-
-  <div class="container" id="projects">
-    <h2>RIWAYAT PENDIDIKAN</h2>
-    <div class="project">
-      <p>TK : TK PGRI 105</p>SD: SDN SAMBIREJO 02</p>SMP: SMP PGRI 01</p>SMK: SMKN 02 SEMARANG</p>
-    </div>
-
   
+  <div class="container" id="about">
+    <h2>RIWAYAT PENDIDIKAN</h2>
+    <p>TK : TK PGRI 105</p>SD : SDN SAMBIREJO 02</p>SMP: SMP PGRI 01 SEMARANG</p>SMK: SMKN 2 SEMARANG</p>
+  </div>
+
   <div class="container" id="contact">
     <h2>CONTACT</h2>
     <p>Email : nailaulfi452@gmail.com</p>
