--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     }
 
     header {
-      background-color: #ADD8E6;
-      color: #4682B4;
+      background-color: #6E85FF;
+      color: #85E3FF;
       text-align: center;
       padding: 1rem 0;
     }
@@ -22,7 +22,7 @@
     nav {
       display: flex;
       justify-content: center;
-      background-color: #00BFFF
+      background-color: #ACE7FF;
       padding: 0.5rem 0;
     }
 
