--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <nav>
     <a href="#about">Tentang</a>
-    <a href="#projects">Proyek</a>
+    <a href="#projects">Pendidikan</a>
     <a href="#contact">Kontak</a>
   </nav>
 
